# kvaggregated

./: .gitignore  Dockerfile  Makefile.am  NEWS  configure.ac  container-build.sh  kvAgregateDbInit.sh  kvAgregated.conf  version.sh
.devcontainer/: Dockerfile  devcontainer-noble.dockerfile  devcontainer.json
debian_files/: changelog  control  copyright  manpage.xml  postinst  postrm  rules
doc/: kvAgregateDbInit.man.xml  kvAgregated.1  kvAgregated.man.xml  kvAgregated.mk
src/: AbstractAgregator.cc  AggregatorHandler.cc  AggregatorHandler.h  AggregatorRunner.cpp  AggregatorRunner.h  AgregatorHandler.cc  AgregatorHandler.h  AgregatorRunner.cpp  AgregatorRunner.h  BackProduction.cc  BackProduction.h  GenerateZero.cc  GenerateZero.h  LogAppender.cpp  LogAppender.h  Makefile.am  WorkLoop.cpp  WorkLoop.h  kvAgregated.mk  main.cc  metrics.cc  metrics.h  minmax.h  paramID.h  rr.cc  rr.h  times.h
src/aggregator/: AbstractAggregator.cc  AbstractAggregator.h  KoppenBasedMeanValueAggregator.cc  KoppenBasedMeanValueAggregator.h  MeanValueAggregator.cc  MeanValueAggregator.h  StandardAggregator.cc  StandardAggregator.h  kvAgregated.mk  minmax.cc  minmax.h  nn_24.cc  nn_24.h  ot_24.cc  ot_24.h  po.cc  po.cpp  po.h  ra2rr_12.cc  ra2rr_12.h  ra2rr_12_forward.cc  rr.cc  rr.h  rr_1.cc  rr_1.h  rr_12.h  rr_24.cc  rr_24.h  ta_24.cc  ta_24.h  useinfoAggregate.h  uu_24.cc  uu_24.h
src/agregator/: AbstractAgregator.cc  AbstractAgregator.h  MeanValueAggregator.cc  MeanValueAggregator.h  MeanValueAgregator.cc  MeanValueAgregator.h  kvAgregated.mk  minmax.cc  minmax.h  nn_24.cc  nn_24.h  ra2rr_12.cc  ra2rr_12.h  ra2rr_12_forward.cc  ra2rr_12_forward.h  rr.cc  rr.h  rr_1.cc  rr_1.h  rr_12.cc  rr_12.h  rr_24.cc  rr_24.h  ta_24.cc  ta_24.h  useinfoAggregate.cc  useinfoAggregate.h  uu_24.cc  uu_24.h
src/checkDecision/: CompleteCheckDecider.cc  CompleteCheckDecider.h  ForeignStationPrecipitationFilter.cc  ForeignStationPrecipitationFilter.h  RR1OverridesRADecider.cc  RR1OverridesRADecider.h  RaOverrideDecider.cc  RaOverrideDecider.h  RunCheckDecider.h  StationRangeFilter.cc  StationRangeFilter.h  kvAgregated.mk
src/configuration/: AggregatorConfiguration.cpp  AggregatorConfiguration.h  AgregatorConfiguration.cpp  AgregatorConfiguration.h  kvAgregated.mk
src/proxy/: CachedDataAccess.cpp  CachedDataAccess.h  CallbackCollection.cpp  CallbackCollection.h  DataAccess.h  DataEvent.cc  DataEvent.h  IncomingHandler.cc  IncomingHandler.h  KvalobsDataAccess.cpp  KvalobsDataAccess.h  KvalobsProxy.cc  KvalobsProxy.h  ProxyDatabaseConnection.cpp  ProxyDatabaseConnection.h  ReadWriteLock.h  kvAgregated.mk
src/test/: AgregatorConfigurationTest.cc  AgregatorHandlerTest.cc  KvalobsProxyTest.cc
test/: AbstractAggregatorTest.cc  AbstractAggregatorTest.h  AbstractAgregatorTest.cc  AbstractAgregatorTest.h  AggregatorConfigurationTest.cc  AggregatorHandlerTest.cc  FlagInheritanceTest.cc  KvalobsProxyTest.cc  MeanValueAggregatorTest.cc  MeanValueAgregatorTest.cc  MinMaxTest.cc  checkDecisionTest.cc  kvAgregated.mk  nn_24Test.cc  ot_24Test.cc  poTest.cc  ra2rr_12ForwardTest.cc  ra2rr_12Test.cc  rr_1Test.cc  ta_24Test.cc  test.cc  uu_24Test.cc
